# my-temporal-pocs

./: .gitignore  README.md
_tracing_go_typescript/: 488a8e12-be55-4896-ab4b-0bf41583c0a7_events.json  58949d95-30ec-4d59-aba8-1830d1a5a470_events.json  README.md  WIP.md  dd10f013-5fae-4108-b93b-e767e4b2be75_events.json
_tracing_go_typescript/ctxpropagation/: README.md  activities.go  go.mod  go.sum  opentelemetry_setup.go  tracer.go  workflow.go
_tracing_go_typescript/src_reproduction/: README.md  package.json
customer-notifications/: README.md  config.go  go.mod  main.go  notification-cell-workflow.go  notification_workflows.go  workflow.go
customer-notifications/client/: main.go
customer-notifications/worker/: main.go
dotnet/_15331/: Directory.Build.props  README.md  TemporalioSamples.sln
dotnet/_7532/: README.md
dotnet/_9108/: README.md  TemporalioSamples.sln
go/6027/: helloworld.go
go/_10405/: README.md  config.go  go.mod  myworkflow.go
go/_11121/: README.md  customer_interceptor.go  go.mod  helloworld.go  helloworld_test.go  interceptor.go
go/_11213/: README.md  customer_interceptor.go  interceptor.go  workflow.go
go/_14283/: README.md  activities.go  go.mod  go.sum  helloworld.go
go/_15212/: child_workflow.go  go.sum  parent_workflow.go  parent_workflow_test.go
go/_15960/: .gitignore  go.sum
go/_17052/: go.mod
go/_5888/: README.md  docker-compose.yml  go.mod  go.sum  metrics.go
go/_6027/: README.md  go.sum  helloworld.go
go/_6182/: README.md  go.sum
go/_6715/: 14d803eb-e233-4970-9c06-739358323810_events.json  data_converter.go  encoded.json  go.mod  not_encoded.json  workflow.go
go/_6808/: aab42a13-54dd-45a1-a749-445dee376283_events.json  go.mod  go.sum  helloworld.go
go/_8012/: go.sum
go/_8421/: README.md  workflow.go
go/_8758/: main.go
go/_8909/: README.md  go.mod  helloworld.go
go/_9426/: go.mod
go/_9469/: README.md  go.mod  go.sum  workflow.go
go/batch_/: 1-build-docker-linux.sh  1-build-docker.sh  2-docker-push.sh  2-docker-push_linux.sh  3-docker-compose-child.sh  3-docker-compose-parent.sh  Dockerfile_child  Dockerfile_parent  README.md  child_entrypoint.sh  docker-compose-child.yml  docker-compose-parent.yml  go.mod  go.sum  main.go  parent_entrypoint.sh
java/_10682/: pom.xml
notifications/: Makefile_wip  README.md  config.go  go.mod  main.go  notification_workflows.go  types.go  workflows.go
python/: pyproject.toml
python/_16423/: README.md  pyproject.toml
python/_16423/open_telemetry/: README.md  docker-compose.yaml  starter.py  worker.py
python/_8706/threaded-heartbeat-decorator-python/threaded-heartbeat-decorator-python/: README.md  pyproject.toml
python/_8706/threaded-heartbeat-decorator-python/threaded-heartbeat-decorator-python/threaded_heartbeat_python/: main.py
ruby/: mtls-connection.md
(+1431 files in other folders)
